# Data

./: PS25061901_ FTIR-Trans_ 266.6A_ 06-20-2025.csv  PS25070101_ FTIR-Trans_ 246A_ 07_02_2025 (1).csv  README.md
powerpoint-mcp-main/: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  data_agent.py  githubtest.py  gittest.py  opencode.json  ppt_generator.py  pyproject.toml  streamlit_app.py
powerpoint-mcp-main/docs/plans/: 2026-02-25-presentation-quality-overhaul-design.md  2026-02-26-dependency-restructure-design.md  2026-02-26-dependency-restructure.md
powerpoint-mcp-main/src/pptx_mcp/: __init__.py  __main__.py  chart_builder.py  composer.py  image_generator.py  layout_classifier.py  overflow.py  server.py  shape_builder.py  slide_builder.py  template_engine.py  text_formatter.py  theme_colors.py
powerpoint-mcp-main/tests/: conftest.py  test_server.py  test_smoke.py  test_text_formatter.py
resource/: Carlsbad prototype elvis description project overview.docx  FTIR GPT 5 benchmarking.docx  PS25061901_ FTIR-Trans_ 266.6A_ 06-20-2025.csv  PS25070101_ FTIR-Trans_ 246A_ 07_02_2025 (1).csv
