[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pptx-mcp"
version = "0.1.1"
description = "MCP server for generating PowerPoint presentations from corporate templates"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mcp", "powerpoint", "pptx", "presentation", "template"]
dependencies = [
    "python-pptx>=1.0.0",
    "mcp[cli]>=1.0.0",
    "lxml>=4.9.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
images = ["openai>=1.0.0"]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
    "openai>=1.0.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
pptx-mcp = "pptx_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pptx_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--import-mode=importlib",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
